--- a/index.html
+++ b/index.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CC's Classic Cakes Home</title>
+    <title>TJ's Lawn Care</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <a href="Default.html">Home</a>
-        <a href="LogIn.html">Login</a>
-        <a href="NewUser.html">Register</a>
-        <a href="OrderFormGuest.html">Enter As Guest</a>
+    <nav class="nav_section">
+        <a href="Mission.html">Mission Statement</a>
+        <a href="Services.html">Services</a>
+        <a href="Contact.html">Contact Us</a>
     </nav>
     <hgroup>
-        <h1><i>CC's Classic Cakes</i></h1>
-        <h2><i>Let Me Satisfy Your Sweet Tooth!</i></h2>
+        <h1><i>TJ's Lawn Care</i></h1>
+        <h2><i>Satisfaction Garuanteed!</i></h2>
     </hgroup>
-
-
-
-    <table>
-        <tr style="height:25px">
-            <td> </td>
-        </tr>
-        <tr>
-            <td>
-                <h1><u><i>Homemade Treats From Cherisse</i></u></h1>
-                <p>
-                    If you enjoy the taste of freshly made homemade cakes then you have got
-                    to try one baked by Jacksonville's finest... Cherisse Coleman!!
-                <p>
-                    Whether
-                    you prefer a whole cake for an event or just a slice to go with your lunch
-                    (slices sold on occasion) both can be accommodated.
-            </td>
-        </tr>
-    </table>
+    <div class="container">
+        
+    </div>
 </body>
 </html>
 
