--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </nav>
     <hgroup>
         <h1><i>TJ's Lawn Care</i></h1>
-        <h2><i>Satisfaction Garuanteed!</i></h2>
+        <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
     </hgroup>
     <div class="container">
         
