--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <nav class="nav_section">
-        <a href="Mission.html">Mission Statement</a>
-        <a href="Services.html">Services</a>
-        <a href="Contact.html">Contact Us</a>
+        <ul class="main_nav">
+            <li><a href="Mission.html">Mission Statement</a></li>
+            <li><a href="Services.html">Services</a></li>
+            <li><a href="Contact.html">Contact Us</a></li>
+        </ul>
     </nav>
     <div class="container">
     <hgroup>
