--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="lawn.jpg" alt="lawn>
-    <nav class="nav_section">
-        <ul class="main_nav">
-            <li><a href="Mission.html">Mission Statement</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-    <hgroup>
-        <h1><i>TJ's Lawn Care</i></h1>
-        <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
-    </hgroup>
+    <div class="backroundPic">
+         <nav class="nav_section">
+             <ul class="main_nav">
+                 <li><a href="Mission.html">Mission Statement</a></li>
+                 <li><a href="Services.html">Services</a></li>
+                 <li><a href="Contact.html">Contact Us</a></li>
+             </ul>
+         </nav>
+         <div class="container">
+         <hgroup>
+             <h1><i>TJ's Lawn Care</i></h1>
+             <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
+         </hgroup>
+         </div>
     </div>
 </body>
 </html>
