--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="backroundPic">
+    <div class="backgroundPic">
          <nav class="nav_section">
              <ul class="main_nav">
                  <li><a href="Mission.html">Mission Statement</a></li>
