--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="lawn.img" alt="grass">
     <div class="backgroundPic">
        <nav class="nav_section">
              <ul class="main_nav">
