--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="lawn.img" alt="grass">
     <div class="backgroundPic">
-       <nav class="nav_section">
-             <ul class="main_nav">
-                 <li><a href="Mission.html">Mission Statement</a></li>
-                 <li><a href="Services.html">Services</a></li>
-                 <li><a href="Contact.html">Contact Us</a></li>
-             </ul>
-         </nav>
-     
-         <div class="container">
+         <img src="lawn.jpg" alt="grass">
+    </div>
+    <nav class="nav_section">
+        <ul class="main_nav">
+            <li><a href="Mission.html">Mission Statement</a></li>
+            <li><a href="Services.html">Services</a></li>
+            <li><a href="Contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+    <div class="container">
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
              <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
