--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
              <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
          </hgroup>
      </div>
-         <ul class="main_nav">
+     <div class="main_nav">
+         <ul>
             <li><a href="Mission.html">Mission Statement</a></li>
             <li><a href="Services.html">Services</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
         </ul>
+     </div>
 </body>
 </html>
 
