--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
      </div>
      <div class="main_nav">
          <ul>
-            <li><a href="Mission.html">Mission Statement</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Contact.html">Contact Us</a></li>
+            <li><a href="mission.html">Mission Statement</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
      </div>
 </body>
