--- a/services.html
+++ b/services.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>TJ's Lawn Care</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 </body>
