--- a/services.html
+++ b/services.html
@@ -6,5 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+         <hgroup>
+             <h1><i>TJ's Lawn Care</i></h1>
+             <h2><i>Services</i></h2>
+         </hgroup>
+         <ul>
+             <li>Lawn Mowing</li>
+             <li>Bush Trimming</li>
+             <li>Laying Mulch</li>
+             <li>Leaf Removal</li>
+Leaf Removal
+     </div>
 </body>
 </html>
