--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="service_container">
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
              <h2><i>Services</i></h2>
