--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
          </hgroup>
      </div>
      <div class="main_nav">
-         <ul>
-            <li><a href="mission.html">Mission Statement</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+         <div class="main_grid">
+              <ul>
+                 <li><a href="mission.html">Mission Statement</a></li>
+                 <li><a href="services.html">Services</a></li>
+                 <li><a href="contact.html">Contact Us</a></li>
+             </ul>
+         </div>
      </div>
 </body>
 </html>
