--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
          <img src="lawn.jpg" alt="grass">
     </div>
     <div class="container">
-         <hgroup>
-             <h1><i>TJ's Lawn Care</i></h1>
-             <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
-         </hgroup>
+        <div class="container_grid">
+              <hgroup>
+                  <h1><i>TJ's Lawn Care</i></h1>
+                  <h2><i>Beautifying the Jacksonville, FL area one lawn at a time!</i></h2>
+              </hgroup>
+        </div>
      </div>
      <div class="main_nav">
          <div class="main_grid">
