--- a/services.html
+++ b/services.html
@@ -10,13 +10,15 @@
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
              <h2><i>Services</i></h2>
+             <h3>Pricing is estimate based on average yard size. Pricing may vary depending on size of yard.</h3>
          </hgroup>
-         <ul>
-             <li>Lawn Mowing</li>
-             <li>Bush Trimming</li>
-             <li>Laying Mulch</li>
-             <li>Leaf Removal</li>
-         </ul>
+         <select id="services">
+              <option value="mowing">Lawn Mowing</option>
+              <option value="trimming">Bush Trimming</option>
+              <option value="mulch">Laying Mulch</option>
+              <option value="leaf">Leaf Removal</option>
+         </select>
+        
      </div>
 </body>
 </html>
