--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <title>TJ's Lawn Care</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css">
+    <link href="scripts.js">
 </head>
 <body>
     <div class="service_container">
