--- a/services.html
+++ b/services.html
@@ -20,6 +20,8 @@
               <option value="leaf">Leaf Removal</option>
          </select>
         
+         <output name="price"></output>
+        
      </div>
 </body>
 </html>
