--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
               <option value="leaf">Leaf Removal</option>
          </select>
         
-         <output name="price"></output>
+         <p id="price"></p>
         
      </div>
 </body>
