--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
              <h2><i>Services</i></h2>
              <h3>Pricing is estimate based on average yard size. Pricing may vary depending on size of yard.</h3>
          </hgroup>
-         <select id="services">
+         <select id="services" onchange="changeFunc();">
               <option value="mowing">Lawn Mowing</option>
               <option value="trimming">Bush Trimming</option>
               <option value="mulch">Laying Mulch</option>
