--- a/services.html
+++ b/services.html
@@ -14,13 +14,14 @@
              <h3>Pricing is estimate based on average yard size. Pricing may vary depending on size of yard.</h3>
          </hgroup>
          <select id="services" onchange="PriceServices();">
+              <option value="selections">Select A Service</option>
               <option value="mowing">Lawn Mowing</option>
               <option value="trimming">Bush Trimming</option>
               <option value="mulch">Laying Mulch</option>
               <option value="leaf">Leaf Removal</option>
          </select>
         
-         <p id="price">Price Here</p>
+         <p id="price"></p>
         
      </div>
 </body>
