--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
               <option value="leaf">Leaf Removal</option>
          </select>
         
-         <p id="price"></p>
+         <p id="price">$0.00</p>
         
      </div>
 </body>
