--- a/services.html
+++ b/services.html
@@ -21,9 +21,8 @@
               <option value="mulch">Laying Mulch</option>
               <option value="leaf">Leaf Removal</option>
          </select>
-        
          <p id="price">$0.00</p>
-        
+         <p><a href="index.html">Home</a></p>
      </div>
 </body>
 </html>
