--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>TJ's Lawn Care</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="backgroundPic">
