--- a/mission.html
+++ b/mission.html
@@ -46,5 +46,7 @@
      right time to use our services.</p>
      
      <h2>Contact Us Today</h2>
+     
+     <p><a href="index.html">Home</a></p>
 </body>
 </html>
