--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
              <h2><i>Services</i></h2>
-             <h3>Pricing is estimate based on average yard size. Pricing may vary depending on size of yard.</h3>
+             <p>Pricing is estimate based on average yard size. Pricing may vary depending on size of yard.</p>
          </hgroup>
          <select id="services" onchange="PriceServices();">
               <option value="selections">Select A Service</option>
