--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <h1>Contact Us:</h1>
+     <h2>Phone: 904-623-0000</h2>
+     <h2>Fax: 904-623-0011</h2>
+     <h2>Email: TJlawnservices@gmail.com</h2>
+    
+     <p><a href="index.html">Home</a></p>
 </body>
 </html>
