--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="businessCard.jpg" class="center" />
-    <h1>Contact Us:</h1>
-     <h2>Phone: 904-623-0000</h2>
-     <h2>Fax: 904-623-0011</h2>
-     <h2>Email: TJlawnservices@gmail.com</h2>
+    <div class="myCard">
+         <h1>Contact Us:</h1>
+         <h2>Phone: 904-623-0000</h2>
+         <h2>Fax: 904-623-0011</h2>
+         <h2>Email: TJlawnservices@gmail.com</h2>
+    </div>
     
      <p><a href="index.html">Home</a></p>
 </body>
