--- a/services.html
+++ b/services.html
@@ -8,11 +8,15 @@
     <script src="scripts.js"></script>
 </head>
 <body>
+    <div class="servicePic">
+        <img src="lawnMower.jpg">
+    </div>
     <div class="service_container">
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
              <h2><i>Services</i></h2>
-             <p>Pricing is estimate based on average yard size. Pricing may vary depending on size of yard.</p>
+             <p>Pricing is our base estimate based on average yard size. Pricing may vary depending on size of yard.</p>
+             <p>Please contact us to have a service technician come out and give you a quote!</p>
          </hgroup>
          <select id="services" onchange="PriceServices();">
               <option value="selections">Select A Service</option>
