--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 <body>
     <div class="service_container">
          <div class="servicePic">
-              <img src="lawnMower.jpg" width="50px" height="50px">
+              <img src="lawnMower.jpg" width="10" height="10">
          </div>
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
@@ -28,7 +28,7 @@
          <p id="price">$0.00</p>
          <p><a href="index.html">Home</a></p>
          <div class="servicePic">
-             <img src="lawnMower.jpg" width="50px" height="50px">
+             <img src="lawnMower.jpg" width="10" height="10">
          </div>
      </div>
 </body>
