--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    <img src="lawnMower.jpg" width="10" height="10">
+    <img src="lawnMower.png" width="10" height="10">
     <div class="service_container">
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
@@ -26,6 +26,6 @@
          <p id="price">$0.00</p>
          <p><a href="index.html">Home</a></p>
      </div>
-    <img src="lawnMower.jpg" width="10" height="10">
+    <img src="lawnMower.png" width="10" height="10">
 </body>
 </html>
