--- a/services.html
+++ b/services.html
@@ -8,7 +8,9 @@
     <script src="scripts.js"></script>
 </head>
 <body>
+    <div class="servicePic">
     <img src="lawnMower.png" width="10" height="10">
+    <div>
     <div class="service_container">
          <hgroup>
              <h1><i>TJ's Lawn Care</i></h1>
