--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                  <li><a href="mission.html">Mission Statement</a></li>
                  <li><a href="services.html">Services</a></li>
                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="TestPic.html">Test Pic</a></li>
              </ul>
          </div>
      </div>
