--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <title>TJ's Lawn Care</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="servicestyle.css">
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <script src="scripts.js"></script>
 </head>
