--- a/services.html
+++ b/services.html
@@ -22,6 +22,8 @@
               <option value="trimming">Bush Trimming</option>
               <option value="mulch">Laying Mulch</option>
               <option value="leaf">Leaf Removal</option>
+              <option value="treatmentBugs">Lawn Treatment (BUGS)</option>
+              <option value="treatmentGrow">Lawn Treatment (FERTILIZE)</option>
          </select>
          <p id="price">$0.00</p>
          <p><a href="index.html">Home</a></p>
