--- a/mission.html
+++ b/mission.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
+     <div class="mission">
      <h1>Our Mission</h1>
      <h2>Experienced Service, Always</h2>
 
@@ -48,5 +49,6 @@
      <h2>Contact Us Today</h2>
      
      <p><a href="index.html">Home</a></p>
+     </div>
 </body>
 </html>
